Correct typo in summary

--- a/summary.tex
+++ b/summary.tex
@@ -93,7 +93,7 @@ proposed in which the value supplied/borrowed by an address at each interaction
 with the protocol is multiplied a simple TVL multiplier $m$ based on
 when the interaction took place. This multiplier ranges linearly from $m = 1$
 for interactions occurring at the end of the eligibility window to $m = 86$ at the
-end of the eligibility window, where $m = 86$ represents the approximately 86-fold
+beginning of the eligibility window, where $m = 86$ represents the approximately 86-fold
 increase in TVL for the Compound protocol during the eligiblity window.
 \\\\
 For each user $i$ and supply/borrow transaction $\alpha$, we estimate the capital
