Correct typo in summary

--- a/summary.tex
+++ b/summary.tex
@@ -98,7 +98,7 @@ increase in TVL for the Compound protocol during the eligiblity window.
 \\\\
 For each user $i$ and supply/borrow transaction $\alpha$, we estimate the capital
 associated with the transaction $C_{i\alpha}$ by multiplying the amount of tokens
-of type T, $N_{i\alpha,T}$ by the average price per token $T$, $P_T$, over the eligibility window,
+of type T, $N_{i\alpha,T}$ by the average price per token, $P_T$, over the eligibility window,
 
 \begin{equation*}
   C_{i\alpha} = N_{i\alpha,T}P_T
