Fix typo in summary

--- a/summary.tex
+++ b/summary.tex
@@ -128,7 +128,7 @@ multiplier $m_{i\alpha}$ satisfies $1 \leq m_{i\alpha} \leq 86$ as described abo
 \\\\
 With this information, the capital term for address $i$ is computed by taking the product
 of the capital value $C_{i\alpha}$ and the TVL multiplier $m_{i\alpha}$ for each qualifying
-transaction, summing over all transactions by that address, dividing by the sum of capital
+transaction, summing over all transactions by that address, and dividing by the sum of capital
 terms over all qualifying addresses. The result is the fraction of $\textrm{TotalCOMP}$ 
 apportioned to address $i$, so we multiply by $\textrm{TotalCOMP}$ to convert from a unitless
 fraction to a total denominated in COMP.
