Reposition histogram in summary

--- a/summary.tex
+++ b/summary.tex
@@ -181,7 +181,7 @@ The distribution that appears to best meet the goal of empowering the
 early user community with a meaningful shot at a role in governance is
 95\% socially-weighted, 5\% capital-weighted:
 
-\begin{figure*}
+\begin{figure*}[h]
  \centering
  \includegraphics[width=5in]{proposals/Proposal.png}
 \end{figure*}
