Retitle summary to better reflect framing of forum discussion

--- a/summary.tex
+++ b/summary.tex
@@ -8,7 +8,7 @@
 
 \renewcommand{\familydefault}{\sfdefault}
 
-\title{Proposed formula for early user COMP rewards}
+\title{Proposed formula for COMP airdrop to early users}
 \author{Produced by @allthecolors in collaboration with the Compound user community}
 
 \begin{document}
