Fix typo in summary

--- a/summary.tex
+++ b/summary.tex
@@ -144,7 +144,7 @@ that is, a minimum number of COMP that every qualifying address will receive.
 To help align the distribution with the governance goals of the airdrop,
 we propose to include a ``top up'' quantity of COMP, distributed equally to all qualifying
 addresses, to raise this floor to an integer number. By setting the floor at an integer 
-number, any future proposals to support early user participation in govenance
+number, any future proposals to support early user participation in governance
 (e.g. decreasing the minimum COMP required to submit a CAP) will be easier for the
 community to understand and implement. This ``top-up'' adjustment effectively
 increases the amount of COMP to be distributed by some small inflationary factor,
